--- a/ext/an602/viglink/config/services.yml
+++ b/ext/an602/viglink/config/services.yml
@@ -3,7 +3,7 @@ imports:
 
 services:
     phpbb.viglink.listener:
-        class: phpbb\viglink\event\listener
+        class: an602\viglink\event\listener
         arguments:
             - '@config'
             - '@template'
@@ -11,21 +11,21 @@ services:
             - { name: event.listener }
 
     phpbb.viglink.acp_listener:
-        class: phpbb\viglink\event\acp_listener
+        class: an602\viglink\event\acp_listener
         arguments:
             - '@config'
             - '@language'
             - '@request'
             - '@template'
             - '@user'
-            - '@phpbb.viglink.helper'
+            - '@an602.viglink.helper'
             - '%core.root_path%'
             - '%core.php_ext%'
         tags:
             - { name: event.listener }
 
     phpbb.viglink.helper:
-        class: phpbb\viglink\acp\viglink_helper
+        class: an602\viglink\acp\viglink_helper
         arguments:
             - '@cache.driver'
             - '@config'
