--- a/ext/an602/viglink/composer.json
+++ b/ext/an602/viglink/composer.json
@@ -4,7 +4,7 @@
 	"description": "The VigLink extension for AN602 makes it possible to earn revenue, without any change to the user experience, when users post and follow links to commercial sites.",
 	"homepage": "https://www.groom.lake.86it.us",
 	"version": "1.0.5",
-	"keywords": ["phpbb", "extension", "viglink"],
+	"keywords": ["an602", "extension", "viglink"],
 	"license": "GPL-2.0-only",
 	"authors": [
 		{
