--- a/config/default/routing/feed.yml
+++ b/config/default/routing/feed.yml
@@ -1,35 +1,35 @@
 an602_feed_forums:
     path: /forums
-    defaults: { _controller: phpbb.feed.controller:forums }
+    defaults: { _controller: an602.feed.controller:forums }
 
 an602_feed_news:
     path: /news
-    defaults: { _controller: phpbb.feed.controller:news }
+    defaults: { _controller: an602.feed.controller:news }
 
 an602_feed_topics:
     path: /topics
-    defaults: { _controller: phpbb.feed.controller:topics }
+    defaults: { _controller: an602.feed.controller:topics }
 
 an602_feed_topics_active:
     path: /topics_active
-    defaults: { _controller: phpbb.feed.controller:topics_active }
+    defaults: { _controller: an602.feed.controller:topics_active }
 
 an602_feed_topics_new:
     path: /topics_new
-    defaults: { _controller: phpbb.feed.controller:topics_new }
+    defaults: { _controller: an602.feed.controller:topics_new }
 
 an602_feed_forum:
     path: /forum/{forum_id}
-    defaults: { _controller: phpbb.feed.controller:forum }
+    defaults: { _controller: an602.feed.controller:forum }
     requirements:
         forum_id: \d+
 
 an602_feed_topic:
     path: /topic/{topic_id}
-    defaults: { _controller: phpbb.feed.controller:topic }
+    defaults: { _controller: an602.feed.controller:topic }
     requirements:
         topic_id: \d+
 
 an602_feed_overall:
     path: /{mode}
-    defaults: { _controller: phpbb.feed.controller:overall }
+    defaults: { _controller: an602.feed.controller:overall }
